fix scroll on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -7568,6 +7568,9 @@ h1, h2, h3, h4, h5,
 
 .owl-carousel {
   position: relative; }
+  .owl-carousel .owl-stage, .owl-carousel.owl-drag .owl-item{
+    -ms-touch-action: auto;
+        touch-action: auto;}
   .owl-carousel .owl-item {
     opacity: .4; }
     .owl-carousel .owl-item.active {
